[package]
name = "tree-sitter-chs"
description = "CHS tree sitter"
version = "0.1.0"
authors = ["Marcos V. Andrade Almeida <mastermarcos1212@hotmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "chs"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/marcosandradev/tree-sitter-chs"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.1"
